--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   --h-font-family: "Fraunces", serif;
 }
 html {
-  font-size: 1rem;
+  font-size: calc(1rem);
 }
 @media (min-width: 768px) {
   html {
@@ -113,7 +113,7 @@ button.add-to-cart {
 .attribution {
   font-size: clamp(0.65rem, 1.5vw, 0.75rem);
   text-align: center;
-  margin-top: 1rem;
+  margin-inline-start: 1rem;
   color: var(--Grey);
 }
 .attribution a {
